RESOLVED FIXED128763
IDB: Three tests crash the DatabaseProcess under ~KeyedDecoder
https://bugs.webkit.org/show_bug.cgi?id=128763
Summary IDB: Three tests crash the DatabaseProcess under ~KeyedDecoder
Brady Eidson
Reported 2014-02-13 14:02:17 PST
IDB: Three tests crash the DatabaseProcess under ~KeyedDecoder Each of these tests encoded an empty array. The decoder handles decoding empty arrays, but the empty array is never encoded! Two of these tests now pass, and the other switches over to a "non-trivial text failure"
Attachments
Patch v1 (9.16 KB, patch)
2014-02-13 14:05 PST, Brady Eidson
andersca: review+
Brady Eidson
Comment 1 2014-02-13 14:05:45 PST
Created attachment 224107 [details] Patch v1
Anders Carlsson
Comment 2 2014-02-13 14:36:52 PST
Comment on attachment 224107 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=224107&action=review > Source/WebCore/platform/KeyedCoding.h:154 > + // Even if this array is empty, the empty array still needs to be recorded. > + if (begin == end) { > + beginArray(key); > + endArray(); > return; > + } Just remove this instead, the code below will do the right thing.
Brady Eidson
Comment 3 2014-02-13 15:34:24 PST
Note You need to log in before you can comment on or make changes to this bug.