IDB: Three tests crash the DatabaseProcess under ~KeyedDecoder https://bugs.webkit.org/show_bug.cgi?id=128763

Reviewed by Anders Carlsson.

Source/WebCore:

No new tests (Covered by three existing tests)

* platform/KeyedCoding.h:
(WebCore::KeyedEncoder::encodeObjects): If the array is empty we still have to begin() and end() it.

LayoutTests:

* platform/mac-wk2/TestExpectations: One test passes, one passes with expectation changes,
  and the third is now a text failure.

* storage/indexeddb/key-type-array-expected.txt:

Canonical link: https://commits.webkit.org/146798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164062 268f45cc-cd09-0410-ab3c-d52691b4dbfc